--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+{<img src="https://codeclimate.com/badge.png" />}[https://codeclimate.com/github/mrudhukar/Money]
+
 == Welcome to Rails
 
 Rails is a web-application framework that includes everything needed to create
